--- a/src/aura/ExpenseListWrapper/ExpenseListWrapper.css
+++ b/src/aura/ExpenseListWrapper/ExpenseListWrapper.css
@@ -1,6 +1,7 @@
 .THIS.c-container {
     border: 1px solid #d8dde6;
     margin: 10px 0 20px 0;
+    height: 350px !important;
 }
 .THIS .custom-box {
     background-color: #f4f6f9;
