--- a/src/aura/ExpenseFormItem/ExpenseFormItem.cmp
+++ b/src/aura/ExpenseFormItem/ExpenseFormItem.cmp
@@ -1,2 +1,3 @@
-<aura:component >
+<aura:component implements="forceCommunity:availableForAllPageTypes" access="global">
+    <c:ExpenseListWrapper/>
 </aura:component>
