--- a/src/aura/ExpenseListWrapper/ExpenseListWrapper.css
+++ b/src/aura/ExpenseListWrapper/ExpenseListWrapper.css
@@ -32,3 +32,17 @@
 .THIS .right-align {
     text-align: right;
 }
+.THIS .hovered-Div:hover {
+    z-index: 1;
+    box-shadow: 0px 0px 30px #000000;
+    
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.02);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.02);
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.02);
+    
+    transition: all 200ms ease-in;
+    transform: scale(1.02);
+}
